# Prunarr

./: .bandit  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  auto-tag.yml  ci.yml  docker.yml  helm.yml  publish.yml
cleanarr/: cleanarr.py  cli.py  config.py  main.py  radarr.py  tautulli.py
cleanarr/commands/: history.py  movies.py  series.py
docs/: COMMANDS.md  CONFIGURATION.md  DOCKER.md  GITHUB_APP_SETUP.md  INSTALLATION.md  KUBERNETES.md  QUICK_START.md  TAG_SYSTEM.md
helm/prunarr/: Chart.yaml  values.yaml
prunarr/: __init__.py  cli.py  config.py  logger.py  main.py  prunarr.py  radarr.py  sonarr.py  tautulli.py  utils.py
prunarr/cache/: __init__.py  cache_config.py  cache_manager.py  cache_store.py
prunarr/commands/: cache.py  history.py  movies.py  providers.py  series.py
prunarr/justwatch/: client.py  exceptions.py  queries.py
prunarr/services/: __init__.py  media_matcher.py  series_service.py  streaming_checker.py  user_service.py  watch_calculator.py
prunarr/utils/: __init__.py  filters.py  formatters.py  parsers.py  serializers.py  tables.py  validators.py
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_cli.py  test_commands.py  test_config.py  test_logger.py  test_prunarr.py  test_radarr.py  test_sonarr.py  test_tautulli.py
(+18 files in other folders)
